--- a/Server/package.json
+++ b/Server/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.5.1",
     "curl": "^0.1.4",
     "express": "^4.18.2",
+    "lodash": "^4.17.21",
     "mongoose": "^7.5.3"
   },
   "devDependencies": {
